--- a/app/components/Double/style.module.css
+++ b/app/components/Double/style.module.css
@@ -25,6 +25,17 @@
     padding-bottom: 66.66%;
 }
 
+.stretchyWrapper::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
+    z-index: 1;
+}
+
 .stretchyWrapper img {
     position: absolute;
     top: 0;
@@ -38,27 +49,59 @@
     position: absolute;
     bottom: 2rem;
     left: 2rem;
-    color: black;
     z-index: 2;
-    width: 100%;
+    width: calc(100% - 4rem);
+}
+
+.body[data-theme="light"] {
+    color: #ffffff;
+}
+
+.body[data-theme="dark"] {
+    color: #000000;
 }
 
 .body h3 {
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 600;
     margin: 0;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.body[data-theme="light"] h3 {
+    color: #ffffff;
+}
+
+.body[data-theme="dark"] h3 {
+    color: #000000;
 }
 
 .body p {
     font-size: 0.8rem;
     margin: 0.5rem 0;
-    opacity: 0.7;
-    font-weight: 400;
+    font-weight: 500;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.body[data-theme="light"] p {
+    color: rgba(255, 255, 255, 0.95);
+}
+
+.body[data-theme="dark"] p {
+    color: rgba(0, 0, 0, 0.95);
 }
 
 .body p:last-child {
     font-size: 0.7rem;
-    opacity: 0.5;
+    font-weight: 400;
+}
+
+.body[data-theme="light"] p:last-child {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.body[data-theme="dark"] p:last-child {
+    color: rgba(0, 0, 0, 0.8);
 } 
