--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+/* Montserrat font loaded via next/font/google in components that need it */
 
 @tailwind base;
 @tailwind components;
